More antidote->zgenom, and more "old" configs.
- Bring in history settings in modular fashion (i.e. from new plugin repo
  michael-odell/zsh-history)
- GITHUB convenience variables

--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,8 @@
 	tags = true
 [alias]
 	glog = log --graph --oneline
+    manifest = ls-tree -r --name-only --full-tree HEAD
+    root = rev-parse --show-toplevel
 
 # https://medium.com/@porteneuve/fix-conflicts-only-once-with-git-rerere-7d116b2cec67
 [rerere]
