Set EDITOR, tweak vim yaml settings, add kaleidoscope as git mergetool

--- a/.gitconfig
+++ b/.gitconfig
@@ -32,6 +32,7 @@
 [merge]
 	conflictStyle = diff3
 
+	tool = Kaleidoscope
 [includeIf "gitdir:~/mw/**"]
     path = ~/.gitconfig.mw
 
@@ -45,3 +46,15 @@
 	ff = only
 [init]
 	defaultBranch = main
+[diff]
+	tool = Kaleidoscope
+[difftool "Kaleidoscope"]
+	cmd = ksdiff --partial-changeset --relative-path \"$MERGED\" -- \"$LOCAL\" \"$REMOTE\"
+[difftool]
+	prompt = false
+	trustExitCode = true
+[mergetool "Kaleidoscope"]
+	cmd = ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
+	trustExitCode = true
+[mergetool]
+	prompt = false
