--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,3 +25,6 @@ bind-key a if -F '#{pane_synchronized}' \
     'setw synchronize-panes on;  display "Pane synchronization turned on."'
 
 
+# Looking for ways to get tmux to copy the character under the cusor when selecting by mouse
+# Per https://dev.to/iggredible/the-easy-way-to-copy-text-in-tmux-319g
+#bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
