--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,9 +2,25 @@ set -g mouse on
 
 set-option -g history-limit 50000
 
-set -g set-titles on
 set -g base-index 1
 set -g pane-base-index 1
+
+# TODO can I actually have both of these?
+set -g set-titles on
+# Let individual terminals change their title
+set-option -g allow-rename on
+
+# To see what's there in the status format:
+# show-options -g status-format
+
+# Put window list in center of pane
+set-option -g status-justify centre
+
+# Can execute shell commands via #(command here)
+set-option -g status-left '#{client_user}@#h '
+set-option -g status-left-length 30
+
+# status-interal option defaults to 15 (seconds)
 
 # There's more I could do with the status bar.  These are some things I was playing with the last
 # time I messed with my tmux config.
@@ -18,12 +34,21 @@ set -g pane-base-index 1
 # This prevents vim, for instance, from taking a second to respond to ESC.
 set -sg escape-time 0
 
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
+
+set-option -g status-style bg=green,fg=white
+# TODO doesn't seem to be what I thought it was?
+# set-option -g message-command-style bg=yellow,fg=white
+
+set-option -g pane-active-border-style fg=magenta
+set-option -g pane-border-indicators both  # colour + arrows
+
+# Style for mouse selection
+set-option -g mode-style bg=yellow,fg=white
 
 bind-key a if -F '#{pane_synchronized}' \
     'setw synchronize-panes off; display "Pane synchronization turned off."' \
     'setw synchronize-panes on;  display "Pane synchronization turned on."'
-
 
 # Looking for ways to get tmux to copy the character under the cusor when selecting by mouse
 # Per https://dev.to/iggredible/the-easy-way-to-copy-text-in-tmux-319g
