Bugfix: zsh fpath and use more common TERM.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,8 @@ set-option -g status-left-length 30
 # This prevents vim, for instance, from taking a second to respond to ESC.
 set -sg escape-time 0
 
-set-option -g default-terminal "tmux-256color"
+# Changed from tmux-screen256color because of BMC CentOS machines
+set-option -g default-terminal "screen-256color"
 
 set-option -g status-style bg=green,fg=white
 # TODO doesn't seem to be what I thought it was?
