Install tmux 3.4 where unavailable.

--- a/.config/1Password/ssh/agent.toml
+++ b/.config/1Password/ssh/agent.toml
@@ -30,3 +30,7 @@
 #  https://developer.1password.com/docs/ssh/agent/config
 [[ssh-keys]]
 vault = "Private"
+
+[[ssh-keys]]
+vault = "BMC"
+item = "rancher_ssh_key"
