tmux: bring back support for tmux 1.8
And party like it's 1999 I'm sure.  Or maybe 2010.  Regardless, I need
tmux 1.8 to work for me on centos 7 machines which seem to want to stay
in my path for a bit yet.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,19 @@
-set -g mouse on
+# Version conditional logic stolen from a very [well-done answer on
+# stackoverflow](https://stackoverflow.com/a/40902312)
+run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | sed -En "s/^tmux[^0-9]*([.0-9]+).*/\1/p")'
+
+# NOTE: I'm hoping this odd multiline syntax can be replaced with curly braces once I no longer have to
+# deal with tmux 1.8 on CentOS 7.  From what I read in the above stackoverflow (that suggests this
+# version detection mechanism), the braces should eventually work.
+
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' '\
+    set -g mode-mouse on ; \
+    set -g mouse-resize-pane on ; \
+    set -g mouse-select-pane on ; \
+    set -g mouse-select-window on'
+
+if-shell -b '[ "$(echo "$TMUX_VERSION > 2.1" | bc)" = 1 ]' '\
+    set -g mouse on'
 
 set-option -g history-limit 50000
 
@@ -37,20 +52,22 @@ set -sg escape-time 0
 # Changed from tmux-screen256color because of BMC CentOS machines
 set-option -g default-terminal "screen-256color"
 
-set-option -g status-style bg=green,fg=white
-# TODO doesn't seem to be what I thought it was?
-# set-option -g message-command-style bg=yellow,fg=white
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" = 1 ]' '\
+    set-option -g status-style bg=green,fg=white ; \
+    set-option -g pane-active-border-style fg=magenta ; \
+    set-option -g pane-border-indicators both  # colour + arrows ; \
+    set-option -g mode-style bg=yellow,fg=white'
 
-set-option -g pane-active-border-style fg=magenta
-set-option -g pane-border-indicators both  # colour + arrows
-
-# Style for mouse selection
-set-option -g mode-style bg=yellow,fg=white
-
-bind-key a if -F '#{pane_synchronized}' \
-    'setw synchronize-panes off; display "Pane synchronization turned off."' \
-    'setw synchronize-panes on;  display "Pane synchronization turned on."'
+bind-key a setw synchronize-panes
 
 # Looking for ways to get tmux to copy the character under the cusor when selecting by mouse
 # Per https://dev.to/iggredible/the-easy-way-to-copy-text-in-tmux-319g
 #bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+
+#/home/onbmc.com/modell/.tmux.conf:1: ambiguous option: mouse                                                                                                                                                     [0/0]
+#/home/onbmc.com/modell/.tmux.conf:40: unknown option: status-style
+#/home/onbmc.com/modell/.tmux.conf:44: unknown option: pane-active-border-style
+#/home/onbmc.com/modell/.tmux.conf:45: unknown option: pane-border-indicators
+#/home/onbmc.com/modell/.tmux.conf:48: unknown option: mode-style
+#/home/onbmc.com/modell/.tmux.conf:52: usage: if-shell [-b] [-t target-pane] shell-command command [command]
+
