--- a/test/Dockerfile.u2404
+++ b/test/Dockerfile.u2404
@@ -6,6 +6,7 @@ RUN apt-get update \
         curl \
         git \
         jq \
+        man \
         openssh-server \
         python3 \
         python3-venv \
@@ -13,5 +14,3 @@ RUN apt-get update \
         vim \
         neovim \
         zsh
-
-RUN apt-get install -y man
