dotfiles-push and basic dockerized test.

--- a/test/Dockerfile.home
+++ b/test/Dockerfile.home
@@ -1,16 +1,5 @@
 FROM distro-base:u2404
 
-RUN adduser michael
-RUN adduser michael sudo
-
-ADD build/upstream.git/ /dotfiles/upstream.git
-ADD build/plugins/ /dotfiles/plugins
-RUN chown -R michael:michael /dotfiles/
-
-ENV DOTFILES_INSTALL=0
-ENV DOTFILES_PLUGIN_UPDATE=1
-ENV DOTFILES_PLUGIN_SOURCE=/dotfiles/plugins
-
 USER michael
 WORKDIR /home/michael
 
@@ -20,7 +9,7 @@ WORKDIR /home/michael
 RUN git --git-dir=$HOME/.dotfiles.git --work-tree=$HOME init \
     && git --git-dir=$HOME/.dotfiles.git --work-tree=$HOME remote add origin /dotfiles/upstream.git \
     && git --git-dir=$HOME/.dotfiles.git --work-tree=$HOME fetch \
-    && git --git-dir=$HOME/.dotfiles.git --work-tree=$HOME/ checkout test
+    && git --git-dir=$HOME/.dotfiles.git --work-tree=$HOME/ checkout main
 
 RUN zsh -i -c cat
 CMD ["zsh", "-i", "-l"]
