--- a/.gitconfig
+++ b/.gitconfig
@@ -58,3 +58,8 @@
 	trustExitCode = true
 [mergetool]
 	prompt = false
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
