More succinct terminal titles, across tmux and iterm.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,10 +20,13 @@ set-option -g history-limit 50000
 set -g base-index 1
 set -g pane-base-index 1
 
-# TODO can I actually have both of these?
+# Display as window title:
+#  session_name: IFF it's non-numeric (i.e. because default names are numeric and I don't want to see
+#               them)
+#  pane_title: as set by termtitle script (i.e. terminal escape sequence)
+#
 set -g set-titles on
-# Let individual terminals change their title
-set-option -g allow-rename on
+set -g set-titles-string '#{?#{m/r:[0-9]+$,#{session_name}},,#{session_name}:}#{pane_title}'
 
 # To see what's there in the status format:
 # show-options -g status-format
@@ -49,8 +52,9 @@ set-option -g status-left-length 30
 # This prevents vim, for instance, from taking a second to respond to ESC.
 set -sg escape-time 0
 
-# Changed from tmux-screen256color because of BMC CentOS machines
-set-option -g default-terminal "screen-256color"
+# I've seen screen-256color work on older distros (e.g. CentOS 7), but the tmux version supports italic
+# text
+set-option -g default-terminal "tmux-256color"
 
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" = 1 ]' '\
     set-option -g status-style bg=green,fg=white ; \
