--- a/.gitconfig
+++ b/.gitconfig
@@ -16,6 +16,9 @@
     manifest = ls-tree -r --name-only --full-tree HEAD
     root = rev-parse --show-toplevel
 
+[advice]
+    detachedHead = false
+
 # https://medium.com/@porteneuve/fix-conflicts-only-once-with-git-rerere-7d116b2cec67
 [rerere]
     enabled = true
