tmux: bottom bar colors appropriate for selenized theme.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,7 +57,7 @@ set -sg escape-time 0
 set-option -g default-terminal "tmux-256color"
 
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" = 1 ]' '\
-    set-option -g status-style bg=green,fg=white ; \
+    set-option -g status-style bg=colour15,fg=colour0 ; \
     set-option -g pane-active-border-style fg=magenta ; \
     set-option -g pane-border-indicators both  # colour + arrows ; \
     set-option -g mode-style bg=yellow,fg=white'
