nook: shell function with reflection in prompt and tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,9 +34,9 @@ set -g set-titles-string '#{?#{m/r:[0-9]+$,#{session_name}},,#{session_name}:}#{
 # Put window list in center of pane
 set-option -g status-justify centre
 
-# Can execute shell commands via #(command here)
-set-option -g status-left '#{client_user}@#h '
-set-option -g status-left-length 30
+set-option -g status-right '#{?@nook,#[#{E:@nook_style}][#{@nook}]#[default] ,}'
+set-option -g status-left ''
+#set-option -g status-left-length 40
 
 # status-interal option defaults to 15 (seconds)
 
