Improvements for Claude and minor other shell/nvim tweaks.

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@
 /.venv
 
 
+# These seem to be system-specific and maybe not worth tracking anyway (?)
+/.claude.json*
+
 
 # Potentially sensitive things shouldn't be stored
 /.aws
