--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,3 +70,6 @@ bind-key a setw synchronize-panes
 # Per https://dev.to/iggredible/the-easy-way-to-copy-text-in-tmux-319g
 #bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
 
+# Claude code shift-enter likes these terminal features
+set -s extended-keys on
+set -as terminal-features 'xterm*:extkeys'
